登录 注册页

--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
                             </div>
                             <!-- 二维码登录 -->
                             <div class="m-main-login-code">
-                                <img src="image/qr.png" alt="">
+                                <img src="image/qr.png" alt="" class="m-main-login-img">
                                 <p class="m-main-login-code-p">使用
                                     <a>万表app</a>
                                     扫码登录<br>
@@ -67,15 +67,18 @@
                                     下载万表app
                                 </div>
                             </div>
-
-                            <p class="m-main-login-footer">
-                                <!-- <span class="m-main-login-footer-img"></span> -->
-                                <!-- <span class="m-main-login-footer-left">手机动态码登录</span> -->
-                                <span class="m-main-login-footer-left">账号密码</span>
+                            <!-- 万表app -->
+                            <div class="m-main-login-logo">
+                                <img src="image/master-qr.png" >
+                            </div>
+                            <div class="m-main-login-footer">
+                                <span class="m-main-login-footer-img"></span>
+                                <span class="m-main-login-footer-left">手机动态码登录</span>
+                                <span class="m-main-login-footer-left1">账号密码</span>
                                 <em class="m-main-login-footer-g">丨</em>
                                 <span class="m-main-login-footer-hidden">仅在APP开放QQ、微信等社交帐号登录功能，<a href="javascript:void(0)">下载登录</a></span>
                                 <span class="m-main-login-footer-right">社交登录</span>
-                            </p>
+                            </div>
                             
                            
                         </div>
