--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
         <div class="r-content">
             <p>注册万表会员</p>
             <div class="r-content-from">
-                <form action="">
+                <form action="" class="r-content-from1">
                     <div>
                         <em class="r-content-from-phone"></em>
                         <input type="text" placeholder="请输入手机号码">
@@ -33,8 +33,19 @@
                         <input type="text" placeholder="请输入图形验证码" id="r-content-from-input">
                         <div id="r-content-from-img" ></div>
                     </div>
-                   
-                   
+                    <div class="r-error">
+                        <em class="r-content-from-error"></em>
+                        <span>请输入您的手机号</span>
+                    </div>
+                    <div class="r-content-from-phone1">
+                        <em class="r-content-from-dun"></em>
+                        <input type="text" placeholder="请输入短信验证码" id="r-content-from-code">
+                        <button type="button"> 获取验证码</button>
+                    </div>
+                    <div class="r-error">
+                        <em class="r-content-from-error"></em>
+                        <span>请输入您的手机号</span>
+                    </div>
                     <div>
                         <em class="r-content-from-s"></em>
                         <input type="text" placeholder="请设置密码">
@@ -52,6 +63,10 @@
                         <span>两次密码不一致，请检查你的密码</span>
                     </div>
                     <input id="r-content-from-last" type="text"  placeholder="如有推荐人，请填写推荐人手机号">
+                    <button type="button">立即注册</button>
+                    <p>点击“立即注册”，即表示您同意并愿意遵守
+                        <a href="javascript:void(0)">万表网用户协议</a>
+                    </p>
                 </form>
             </div>
         </div>
