9-29新增购物页内容

--- a/shop.html
+++ b/shop.html
@@ -238,16 +238,33 @@
                         <h2>阿玛尼ARMANI</h2>
                         <div class="L_self_content">
                             <a href="">
-                                <img src="" alt="">
-                                <span></span>
+                                <img src="https://image8.wbiao.co/shop/0ddca2694fb9496090d74ac8cdeaa357.jpg" alt="">
+                                <span>自营</span>
+                            
                             </a>
                             <p>全部商品</p><span>1165</span>
                             <p>累计销量</p><span>1165</span>
                             <p>关注数</p><span>1165</span>
+                            <div class="L_shop_look">
+                                <i></i><span>进店逛逛</span>
+                                <i></i><span>联系客服</span>
+                            </div>
                         </div>
-                        <div class="L_shop_look">
-                            <i></i><span>进店逛逛</span>
-                            <i></i><span>联系客服</span>
+                    </div>
+                    <div class="L_self_seach">
+                        <h2>店内搜索</h2>
+                        <div class="L_self_seach_content">
+                            <p>
+                                <span>关键字</span>
+                                <input type="text">
+                            </p>
+                            <p>
+                                <span>价格区间</span>
+                                <input type="text">
+                                <span id="L_noMargin">-</span>
+                                <input type="text">
+                            </p>
+                            <button>搜索</button>
                         </div>
                     </div>
                 </div>
