万表网公共部分 及其轮播

--- a/test.html
+++ b/test.html
@@ -13,101 +13,17 @@
     <meta name="keywords" content="手表,买手表,卖手表,修手表,换手表,万表网,万表网官网,名表商城,正品手表,瑞士手表">
     <title>万表【官网】：甄选全球高品质腕表，买手表，上万表！</title>
 </head>
-
+<style>
+    .test {
+        color: red;
+    }
+    .test1 {
+        color: blue;
+    }
+</style>
 <body>
-    <!-- 万表网首部开始 -->
-    <div class="top">
-        <div class="inner_top  clearfix">
-            <div class="wrap">
-                <a href="#">正品保障，免息分期！</a>
-                <div class="inner_top_right">
-                    <a href="#">请登录</a>
-                    <a href="#" id="top_gift">注册即送3500元大礼包</a>
-                    <span class="line">|</span>
-                    <a href="#">购物车</a>
-                    <a href="#" id="ser" class="">客户服务</a>
-                    <div class="drop_window hide">
-                        <ul class="">
-                            <li><a href="#">客户顾问</a></li>
-                            <li><a href="#">售后维修</a></li>
-                            <li><a href="#">帮助中心</a></li>
-                            <li><a href="#">办理信用卡</a></li>
-                        </ul>
-                        <div class="serPhone">
-                            <p>服务专线：400-883-2688</p>
-                            <p>外呼号码：020-83931899</p>
-                        </div>
-                    </div>
-                    <a href="#">会员福利</a>
-                    <span class="line">|</span>
-                    <a href="#">ENGLISH</a>
-                </div>
-            </div>
-        </div>
-        <div class="head wrap clearfix">
-            <div class="head_left clearfix">
-                <a href="index.html"><img src="images/logo-icon.png" alt="万表网logo"></a>
-                <a href="#"><img src="images/slogan.png" alt="万表网商标"></a>
-            </div>
-            <div class="searchForm">
-                <i class="glass"></i>
-                <input type="text" name="" id="index_search" value="劳力士">
-                <div class="tips hide">
-                    <p>热门推荐</p>
-                    <a href="#">劳力士</a>
-                    <a href="#">万表庆920周年</a>
-                </div>
-                <button type="button">搜素</button>
-            </div>
-            <a href="#" class="QCindex"><img src="images/QRcode.png"></a>
-        </div>
-        <div class="nav wrap clearfix">
-            <div class="nav_left">
-                <i class="list_icon"></i>
-                <a href="#">全部商品</a>
-            </div>
-            <div class="good_list">
-                <ul>
-                    <li><a href="#">男表</a></li>
-                    <li><a href="#">女表</a></li>
-                    <li class="spc">
-                        <a href="#">极速选表</a>
-                        <i class="red_circle"></i>
-                    </li>
-                    <li><a href="#">品牌馆</a></li>
-                    <li><a href="#">秒杀</a></li>
-                    <li><a href="#">体验中心</a></li>
-                    <li><a href="#">名匠维修</a></li>
-                    <li class="spc">
-                        <a href="#">认证二手表</a>
-                        <i class="red_circle"></i>
-                    </li>
-                    <li><a href="#">奢品共享</a></li>
-                    <li><a href="#">手表资讯</a></li>
-                </ul>
-            </div>
-        </div>
+    <div class="test test1">
+        123
     </div>
-    123
-    <!-- 万表网首部结束  -->
-    <!-- 主体部分开始 -->
-    <!-- <div class="main">
-        123456
-    </div> -->
-    <!-- 主体部分结束 -->
-    <!-- 万表网尾部开始 -->
-    <!-- <div class="footer">
-        <div class="top_foot">
-            <div class="inner_foot">
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-            </div>
-        </div>
-    </div> -->
-    <!-- 万表网尾部结束 -->
-    <script src="js/index.js"></script>
 </body>
-
 </html>
