--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/swiper.js"></script>
     <meta name="description"
         content="【万表网官网】：买原装正品世界名表：浪琴、天梭、欧米茄、劳力士等瑞士手表品牌，信用卡分期付款，正品保证，全国联保，终身售后保障！客服电话：400-883-2688！">
     <meta name="keywords" content="手表,买手表,卖手表,修手表,换手表,万表网,万表网官网,名表商城,正品手表,瑞士手表">
@@ -17,7 +19,7 @@
 <body>
     <!-- 万表网首部开始 -->
     <div class="ad">
-        <a href="#" class="wrap">
+        <a href="javascript:void(0)" class="wrap">
             <img src="images/index_ad.jpg" alt="">
         </a>
         <div class="ad_close"></div>
@@ -25,28 +27,28 @@
     <div class="top clearfix">
         <div class="inner_top clearfix">
             <div class="wrap clearfix">
-                <a href="#">正品保障，免息分期！</a>
+                <a href="javascript:void(0)">正品保障，免息分期！</a>
                 <div class="inner_top_right">
-                    <a href="#">请登录</a>
-                    <a href="#" id="top_gift">注册即送3500元大礼包</a>
+                    <a href="javascript:void(0)">请登录</a>
+                    <a href="javascript:void(0)" id="top_gift">注册即送3500元大礼包</a>
                     <span class="line">|</span>
-                    <a href="#">购物车</a>
-                    <a href="#" id="ser" class="">客户服务</a>
-                    <div class="drop_window hide">
-                        <ul class="">
-                            <li><a href="#">客户顾问</a></li>
-                            <li><a href="#">售后维修</a></li>
-                            <li><a href="#">帮助中心</a></li>
-                            <li><a href="#">办理信用卡</a></li>
+                    <a href="javascript:void(0)">购物车</a>
+                    <a href="javascript:void(0)" id="ser" class="">客户服务</a>
+                    <div id="drop_window">
+                        <ul>
+                            <li><a href="javascript:void(0)">客户顾问</a></li>
+                            <li><a href="javascript:void(0)">售后维修</a></li>
+                            <li><a href="javascript:void(0)">帮助中心</a></li>
+                            <li><a href="javascript:void(0)">办理信用卡</a></li>
                         </ul>
                         <div class="serPhone">
                             <p>服务专线：400-883-2688</p>
                             <p>外呼号码：020-83931899</p>
                         </div>
                     </div>
-                    <a href="#">会员福利</a>
+                    <a href="javascript:void(0)">会员福利</a>
                     <span class="line">|</span>
-                    <a href="#">ENGLISH</a>
+                    <a href="javascript:void(0)">ENGLISH</a>
                 </div>
             </div>
         </div>
@@ -54,92 +56,165 @@
             <div class="head wrap clearfix">
                 <div class="head_left clearfix">
                     <a href="index.html"><img src="images/logo-icon.png" alt="万表网logo"></a>
-                    <a href="#"><img src="images/slogan.png" alt="万表网商标"></a>
+                    <a href="javascript:void(0)"><img src="images/slogan.png" alt="万表网商标"></a>
                 </div>
                 <div class="searchForm">
                     <i class="glass"></i>
                     <input type="text" name="" id="index_search" value="劳力士">
                     <div class="tips hide">
                         <p>热门推荐</p>
-                        <a href="#">劳力士</a>
-                        <a href="#">万表庆920周年</a>
+                        <a href="javascript:void(0)">劳力士</a>
+                        <a href="javascript:void(0)">万表庆920周年</a>
                     </div>
                     <button type="button">搜素</button>
                 </div>
-                <a href="#" class="QCindex"><img src="images/QRcode.png"></a>
+                <a href="javascript:void(0)" class="QCindex"><img src="images/QRcode.png"></a>
             </div>
         </div>
         <div class="nav wrap clearfix">
             <div class="nav_left">
-                <a href="#">
+                <a href="javascript:void(0)">
                     全部商品
                     <i class="list_icon"></i>
                 </a>
             </div>
             <div class="good_list clearfix">
                 <ul>
-                    <li><a href="#">男表</a></li>
-                    <li><a href="#">女表</a></li>
+                    <li><a href="javascript:void(0)">男表</a></li>
+                    <li><a href="javascript:void(0)">女表</a></li>
                     <li class="spc">
-                        <a href="#">极速选表</a>
+                        <a href="javascript:void(0)">极速选表</a>
                         <i class="red_circle"></i>
                     </li>
-                    <li><a href="#">品牌馆</a></li>
-                    <li><a href="#">秒杀</a></li>
-                    <li><a href="#">体验中心</a></li>
-                    <li><a href="#">名匠维修</a></li>
+                    <li><a href="javascript:void(0)">品牌馆</a></li>
+                    <li><a href="javascript:void(0)">秒杀</a></li>
+                    <li><a href="javascript:void(0)">体验中心</a></li>
+                    <li><a href="javascript:void(0)">名匠维修</a></li>
                     <li class="spc">
-                        <a href="#">认证二手表</a>
+                        <a href="javascript:void(0)">认证二手表</a>
                         <i class="red_circle"></i>
                     </li>
-                    <li><a href="#">奢品共享</a></li>
-                    <li><a href="#">手表资讯</a></li>
+                    <li><a href="javascript:void(0)">奢品共享</a></li>
+                    <li><a href="javascript:void(0)">手表资讯</a></li>
                 </ul>
             </div>
         </div>
     <div class="bot">
-        <div class="bot_msg hide">
+        <div class="bot_msg">
             <div class="bot_msg_shape"></div>
+            <div class="bot_msg_close"></div>
             <div class="bot_msg_top">
                 <p class="bot_msg_tit">十月特惠专场</p>
                 <p class="bot_msg_info">低至3.5折起 咨询客服享好礼</p> 
             </div>
             <div class="bot_msg_btm">
-                <a href="#" style="position: relative">
+                <a href="javascript:void(0)" style="position: relative">
                     选表咨询
                     <i class="bot_red"></i>
                 </a>
-                <a href="#">手表维修</a>
+                <a href="javascript:void(0)">手表维修</a>
             </div>
         </div>
     </div>
+    <!-- <div class="right_nav">
+        <a href="javascript:void(0)">
+            <i></i>
+            <div class="right_nav_more">购物车</div>
+        </a>
+        <a href="javascript:void(0)">
+            <i></i>
+            <div class="right_nav_more">我的收藏</div>
+        </a>
+        <a href="javascript:void(0)">
+            <i></i>
+            <div class="right_nav_more">浏览记录</div>
+        </a>
+        <a href="javascript:void(0)">
+            <i></i>
+            <div class="right_nav_more">
+                <img src="#" alt="">
+            </div>
+        </a>
+        <a href="javascript:void(0)">
+            <i></i>
+            <div class="right_nav_more">返回顶部</div>
+        </a>
+    </div> -->
     </div>
     <!-- 万表网首部结束  -->
     <!-- 主体部分开始 -->
     <div class="main">
-        123456
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_1.jpg">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_2.jpg">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_3.jpg">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_4.jpg">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_5.jpg">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_6.jpg">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_7.jpg">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_8.jpg">
+                    </a>
+                </div>
+            </div>
+            <!-- 如果需要分页器 -->
+            <div class="swiper-pagination"></div>
+            <!-- 如果需要导航按钮 -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
     </div>
     <!-- 主体部分结束 -->
     <!-- 万表网尾部开始 -->
     <div class="footer wrap">
         <div class="top_foot clearfix">
-            <a href="#" class="help">
+            <a href="javascript:void(0)" class="help">
                 正品保障
                 <i class="help_icon1"></i>
             </a>
-            <a href="#" class="help">
+            <a href="javascript:void(0)" class="help">
                 免期分期
                 <i class="help_icon2"></i>
             </a>
-            <a href="#" class="help">
+            <a href="javascript:void(0)" class="help">
                 全球联保
                 <i class="help_icon3"></i>
             </a>
-            <a href="#" class="help">
+            <a href="javascript:void(0)" class="help">
                 假一赔三
                 <i class="help_icon4"></i>
             </a>
-            <a href="#" class="help">
+            <a href="javascript:void(0)" class="help">
                 终身售后
                 <i class="help_icon5"></i>
             </a>
@@ -151,84 +226,99 @@
                 <p class="p1">客服电话</p>
                 <p class="p2">400-883-2688</p>
                 <p class="p3">外呼电话020-83931899</p>
-                <a href="#" class="p4">售后维修</a>
+                <a href="javascript:void(0)" class="p4">售后维修</a>
             </div>
             <div class="foot_list">
                 <ul>  
                     <li class="foot_list_tit">新手指南</li>
-                    <li><a href="#">注册新会员</a></li>
-                    <li><a href="#">购物流程</a></li>
-                    <li><a href="#">手表小知识</a></li>
-                    <li><a href="#">退换货流程</a></li>
+                    <li><a href="javascript:void(0)">注册新会员</a></li>
+                    <li><a href="javascript:void(0)">购物流程</a></li>
+                    <li><a href="javascript:void(0)">手表小知识</a></li>
+                    <li><a href="javascript:void(0)">退换货流程</a></li>
                 </ul>
                 <ul>  
                     <li class="foot_list_tit">支 付</li>
-                    <li><a href="#">支付方式</a></li>
-                    <li><a href="#">分期付款</a></li>
-                    <li><a href="#">发票说明</a></li>
-                    <li><a href="#">支付问题</a></li>
+                    <li><a href="javascript:void(0)">支付方式</a></li>
+                    <li><a href="javascript:void(0)">分期付款</a></li>
+                    <li><a href="javascript:void(0)">发票说明</a></li>
+                    <li><a href="javascript:void(0)">支付问题</a></li>
                 </ul>
                 <ul>  
                     <li class="foot_list_tit">配 送</li>
-                    <li><a href="#">包裹签收</a></li>
-                    <li><a href="#">配送方式</a></li>
-                    <li><a href="#">配送说明</a></li>
-                    <li><a href="#">自提流程</a></li>
+                    <li><a href="javascript:void(0)">包裹签收</a></li>
+                    <li><a href="javascript:void(0)">配送方式</a></li>
+                    <li><a href="javascript:void(0)">配送说明</a></li>
+                    <li><a href="javascript:void(0)">自提流程</a></li>
                 </ul>
                 <ul>  
                     <li class="foot_list_tit">万表保障</li>
-                    <li><a href="#">正品保障</a></li>
-                    <li><a href="#">售后服务</a></li>
-                    <li><a href="#">价格保护</a></li>
-                    <li><a href="#">七天退换说明</a></li>
+                    <li><a href="javascript:void(0)">正品保障</a></li>
+                    <li><a href="javascript:void(0)">售后服务</a></li>
+                    <li><a href="javascript:void(0)">价格保护</a></li>
+                    <li><a href="javascript:void(0)">七天退换说明</a></li>
                 </ul>
                 <ul>  
                     <li class="foot_list_tit tit_spc">开放合作</li>
-                    <li><a href="#">关于万表</a></li>
-                    <li><a href="#" class="tit_spc">商务合作</a></li>
-                    <li><a href="#">万表声明</a></li>
+                    <li><a href="javascript:void(0)">关于万表</a></li>
+                    <li><a href="javascript:void(0)" class="tit_spc">商务合作</a></li>
+                    <li><a href="javascript:void(0)">万表声明</a></li>
                 </ul>
             </div>
-            <a href="#"><img src="images/foot_Qc.jpg" class="foot_Qc"></a>
+            <a href="javascript:void(0)"><img src="images/foot_Qc.jpg" class="foot_Qc"></a>
         </div>
         <div class="foot_info clearfix">
-                <a href="#">万表app</a>
-                <a href="#">万表名匠</a>
-                <a href="#">奢品共享</a>
-                <a href="#">新款手表</a>
-                <a href="#">二手商城</a>
-                <a href="#">热销</a>
-                <a href="#">天猫万表网旗舰店</a>
-                <a href="#">京东万表网旗舰店</a>
-                <a href="#">手表资讯</a>
-                <a href="#">天梭手表</a>
-                <a href="#">&gt;</a>
+                <a href="javascript:void(0)">万表app</a>
+                <a href="javascript:void(0)">万表名匠</a>
+                <a href="javascript:void(0)">奢品共享</a>
+                <a href="javascript:void(0)">新款手表</a>
+                <a href="javascript:void(0)">二手商城</a>
+                <a href="javascript:void(0)">热销</a>
+                <a href="javascript:void(0)">天猫万表网旗舰店</a>
+                <a href="javascript:void(0)">京东万表网旗舰店</a>
+                <a href="javascript:void(0)">手表资讯</a>
+                <a href="javascript:void(0)">天梭手表</a>
+                <span class="foot_slide_info">&gt;</span>
         </div>
+        <div class="foot_info_list foot_info hide">
+                <a href="javascript:void(0)">浪琴手表</a>
+                <a href="javascript:void(0)">欧米茄手表</a>
+                <a href="javascript:void(0)">卡西欧手表</a>
+                <a href="javascript:void(0)">卡地亚手表</a>
+                <a href="javascript:void(0)">手表图片</a>
+                <a href="javascript:void(0)">手表评论</a>
+                <a href="javascript:void(0)">手表排行榜</a>
+                <a href="javascript:void(0)">珠宝新闻</a>
+                <a href="javascript:void(0)">手表问答</a>
+                <a href="javascript:void(0)">智能手表</a>
+                <a href="javascript:void(0)">信用卡中心</a>
+                <a href="javascript:void(0)">手表专题</a>
+                <a href="javascript:void(0)">手表常识</a>
+            </div>
         <div class="copyright">
             <span>万表网名表商城 版权所有 2009-2019</span>
-            <a href="#">ICP备案证书号:粤ICP备09108738号</a>
+            <a href="javascript:void(0)">ICP备案证书号:粤ICP备09108738号</a>
             <span>网监备案:4401060103141</span>
             <p>广州市万表科技股份有限公司 地址:广州市番禺区番禺大道北60-1号</p>
             <p>Copyright 2009-2019 WWW.WBIAO.CN.LTD ALL RIGHT RESERVED.</p>
         </div>
         <div class="final">
             <div class="police clearfix">
-                <a href="#"><img src="images/final1.png" alt=""></a>
-                <a href="#"><img src="images/final2.png" alt=""></a>
-                <a href="#"><img src="images/final3.png" alt=""></a>
+                <a href="javascript:void(0)"><img src="images/final1.png" alt=""></a>
+                <a href="javascript:void(0)"><img src="images/final2.png" alt=""></a>
+                <a href="javascript:void(0)"><img src="images/final3.png" alt=""></a>
             </div>
             <div class="nice_link">
-                <a href="#">联系QQ3268217127</a>
-                <a href="#">折800网</a>
-                <a href="#">音乐巴士</a>
-                <a href="#">聚美优品优惠券</a>
-                <a href="#">手表问答</a>
-                <a href="#">搜了网</a>
-                <a href="#">海鸥</a>
-                <a href="#">健客网上药店</a>
-                <a href="#">名表回收</a>
-                <a href="#">律师</a>
-                <a href="#">&gt;</a>
+                <a href="javascript:void(0)">联系QQ3268217127</a>
+                <a href="javascript:void(0)">折800网</a>
+                <a href="javascript:void(0)">音乐巴士</a>
+                <a href="javascript:void(0)">聚美优品优惠券</a>
+                <a href="javascript:void(0)">手表问答</a>
+                <a href="javascript:void(0)">搜了网</a>
+                <a href="javascript:void(0)">海鸥</a>
+                <a href="javascript:void(0)">健客网上药店</a>
+                <a href="javascript:void(0)">名表回收</a>
+                <a href="javascript:void(0)">律师</a>
+                <a href="javascript:void(0)">&gt;</a>
             </div>
         </div>
     </div>
