10-2新增左侧栏

--- a/shop.html
+++ b/shop.html
@@ -142,7 +142,6 @@
                             <span>￥2,590</span>
                         </div>
                         <p>无需领券，已为您设置最大折扣，咨询客服下单即可</p>
-                        
                     </div>
                     <div class="L_shop_dispatch">
                         <span>配送</span>
@@ -240,7 +239,7 @@
                             <a href="">
                                 <img src="https://image8.wbiao.co/shop/0ddca2694fb9496090d74ac8cdeaa357.jpg" alt="">
                                 <span>自营</span>
-                            
+
                             </a>
                             <p>全部商品</p><span>1165</span>
                             <p>累计销量</p><span>1165</span>
@@ -267,11 +266,105 @@
                             <button>搜索</button>
                         </div>
                     </div>
+                    <div class="L_self_list">
+                        <h2>大家还看了这些</h2>
+                        <ul>
+                            <li>
+                                <a href="">
+                                    <img src="https://image8.wbiao.co/shop/76d699e812944fc4a43717894656afb9.jpg?x-oss-process=image/resize,w_300,h_300,color_ffffff" alt="">
+                                    <p class="L_Mpay">
+                                        <span>月付</span>
+                                        <span>￥130</span>
+                                        <span>￥1560</span>
+                                    </p>
+                                    <p>吉普Jeep-威利斯系列 JPL200201MA 镂空全自动机械男表</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="https://image8.wbiao.co/shop/a41f490d2e6b4d9081a9c10ac8edaffa.jpg?x-oss-process=image/resize,w_300,h_300,color_ffffff" alt="">
+                                    <p class="L_Mpay">
+                                        <span>月付</span>
+                                        <span>￥574</span>
+                                        <span>￥6888</span>
+                                    </p>
+                                    <p>泰格豪雅(TAG HEUER)- FORMULA 1系列 WAZ1015.FC8198 石英男表</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="https://image8.wbiao.co/shop/48b88e9be01f449ca543972c67ecfbca.jpg?x-oss-process=image/resize,w_300,h_300,color_ffffff" alt="">
+                                    <p class="L_Mpay">
+                                        <span>月付</span>
+                                        <span>￥409.2</span>
+                                        <span>￥4910</span>
+                                    </p>
+                                    <p>法国国民腕表品牌：Michel Herbelin赫柏林  City都市系列  1669/04  男士自动机械表</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="https://image8.wbiao.co/shop/2bbf13d343c64eaaaeb4ab138319115a.jpg?x-oss-process=image/resize,w_300,h_300,color_ffffff" alt="">
+                                    <p class="L_Mpay">
+                                        <span>月付</span>
+                                        <span>￥14</span>
+                                        <span>￥168</span>
+                                    </p>
+                                    <p>迪士尼（Disney）-时尚男表 MK-12022B1 少年学生 简约时尚 石英男表</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="https://image8.wbiao.co/shop/cca92e8cf5f64284ad1b466db48e7cce.jpg?x-oss-process=image/resize,w_300,h_300,color_ffffff" alt="">
+                                    <p class="L_Mpay">
+                                        <span>月付</span>
+                                        <span>￥149.2</span>
+                                        <span>￥1790</span>
+                                    </p>
+                                    <p>纯正瑞士品牌 迪沃斯DAVOSA-Executive行政系列 Vireo Dual Time 商务精英 双时区世界时 黑盘皮带 41</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="https://image8.wbiao.co/shop/201604_18_16249355_66617.jpg?x-oss-process=image/resize,w_300,h_300,color_ffffff" alt="">
+                                    <p class="L_Mpay">
+                                        <span>月付</span>
+                                        <span>￥195</span>
+                                        <span>￥2340</span>
+                                    </p>
+                                    <p>纯正瑞士品牌 迪沃斯DAVOSA-Executive行政系列 Vireo Chrono 商务精英 计时版 黑盘皮带 41mm 16249355 </p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="L_shop_nav_content">
+                    <div class="L_bottom_line">
+                        <div class="L_move_nav">
+                            <a class="L_checkOn" href="javascript:viod(0)">商品详情</a>
+                            <a href="javascript:viod(0)">规格参数</a>
+                            <a href="javascript:viod(0)">售后服务</a>
+                            <a href="javascript:viod(0)">线下体验</a>
+                            <a href="javascript:viod(0)">评价(99)</a>
+                        </div>
+                    </div>
+                    <div class="L_nav_content">
+                        <div class="prompt">
+                            <p>温馨提示</p>
+                            <p>商品展示区划去的价格为品牌建议零售价，并非原价；万表价为商品实时售价，欢迎比较购买！</p>
+                        </div>
+                        <div class="imgList">
+                            <img src="https://image8.wbiao.co/shop/baeeddad38264753b17e4659950eda38.jpg?x-oss-process=image/resize,w_920" alt="">
+                        </div>
+                        <div class="imgList">
+                            <img src="https://image8.wbiao.co/detail/goods_201708_16_1502849608617399138.jpg?x-oss-process=image/resize,w_920/watermark,image_c2hvcC9sb2dvLWljb24ucG5n,t_100,g_center" alt="">
+                        </div>
+                        <div class="imgList">
+                            <img src="https://image8.wbiao.co/detail/goods_201708_16_1502849608273144795.jpg?x-oss-process=image/resize,w_920/watermark,image_c2hvcC9sb2dvLWljb24ucG5n,t_100,g_center" alt="">
+                        </div>
+                    </div>
 
                 </div>
-
             </div>
         </div>
 
