--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                                 <span class="m-main-login-p-right">扫码登录</span>
                             </p>
                             <!-- 动态码登录 -->
-                            <div class="m-main-login-move">
+                            <!-- <div class="m-main-login-move">
                                 <input type="text" placeholder="手机号码">
                                 <input type="text" placeholder="请输入图形验证码">
                                 <div id="r-content-from-img" ></div>
@@ -42,7 +42,7 @@
                                 <span>
                                     <a href="register.html"> 免费注册</a>
                                 </span>
-                            </div>
+                            </div> -->
                             <!-- 密码登录 -->
                             <div class="m-main-login-div">
                                 <input type="text" placeholder="手机号码/会员名/邮箱">
