--- a/register.html
+++ b/register.html
@@ -37,11 +37,11 @@
                         <em class="r-content-from-error"></em>
                         <span>请输入您的手机号</span>
                     </div>
-                    <div class="r-content-from-phone1">
+                    <!-- <div class="r-content-from-phone1">
                         <em class="r-content-from-dun"></em>
                         <input type="text" placeholder="请输入短信验证码" id="r-content-from-code">
                         <button type="button"> 获取验证码</button>
-                    </div>
+                    </div> -->
                     <div class="r-error">
                         <em class="r-content-from-error"></em>
                         <span>请输入您的手机号</span>
