信用卡中心页面

--- a/credit-card.html
+++ b/credit-card.html
@@ -81,9 +81,65 @@
                 </div>
             </div>
         </div>
-        <div></div>
-    </div>
+        <div class="x_top_bank">
+            <div class="x_bank_list">
+                <span><i></i>银行快速导航</span>
+            </div>
+            <div>
 
+            </div>
+            <div class="x_top_nav">
+                <ul>
+                    <li>
+                        <a href="">信用卡首页</a>
+                    </li>
+                    <li>
+                        <a href="">信用卡资讯</a>
+                    </li>
+                    <li>
+                        <a href="">银行网点</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="x_credit_banner">
+        <a href="" target="_blank">
+            <img src="images/credit-banner.jpg" alt="">
+        </a>
+    </div>
+    <div class="x_bank">
+        <div class="x_bank_aisle">
+            <h3>申请信用卡快速通道</h3>
+            <div class="x_bank_silder">
+                <div class="x_bank_item">
+                    <ul>
+                        <li>
+                            <a href="" target="_blank">
+                                <img src="images/credit-card-bank_1.jpg" alt="招商银行">
+                            </a>
+                            <a href="" target="_blank">
+                                <img src="images/credit-card-bank_2.jpg" alt="浦发银行">
+                            </a>
+                            <a href="" target="_blank">
+                                <img src="images/credit-card-bank_3.jpg" alt="工商银行">
+                            </a>
+                            <a href="" target="_blank">
+                                <img src="images/credit-card-bank_4.jpg" alt="兴业银行">
+                            </a>
+                            <a href="" target="_blank">
+                                <img src="images/credit-card-bank_5.jpg" alt="广州银行">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <a href=""></a>
+                    <a href=""></a>
+                </div>
+            </div>
+        </div>
+    </div>
     <br>
     <br>
     <br>
